k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-catalog
  namespace: datarecs
  labels:
    app: event-catalog
spec:
  type: ClusterIP
  selector:
    app: event-catalog
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
